<resources>
    <string name="app_name">Utell Restaurant</string>
    <string name="error_something_went_wrong">Something Went Wrong !!</string>
    <string name="no_network">No Internet.</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="signUp">Sign Up</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email:</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="updateAccount">Update Account</string>
    <string name="update">Update</string>
    <string name="signOut">Sign Out</string>
    <string name="user_name">User Name</string>
    <string name="enter_mobile">Enter Mobile No.</string>
    <string name="addItem">Add Item</string>
    <string name="enter_shoe_name">Brand</string>
    <string name="enter_desc">Description</string>
    <string name="enter_price">Price</string>
    <string name="enter_id">Id</string>
    <string name="upload">Upload</string>
    <string name="email">Email</string>
    <string name="name_dot">Name : </string>
    <string name="pin_code_dot">PinCode : </string>
    <string name="balance_added_dot">Balance Added : </string>
    <string name="card_number">Card number</string>
    <string name="cvc">CVV</string>
    <string name="mm_yy">MM/YY</string>
    <string name="pay">Pay</string>
    <string name="enter_email_id">Enter email id</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="congratulations">Congratulations!! \n\n Order Placed</string>
    <string name="buy_item">Add item to buy</string>
    <string name="enter_address">Enter address</string>
    <string name="address">Delivery Address</string>
    <string name="submit">Submit</string>
    <string name="enter_name_of_which_you_want_image">Enter name of which you want image</string>
    <string name="welcome">Welcome</string>
    <string name="create">Create</string>
    <string name="cash_out">Cash Out </string>
    <string name="cash_in">Cash In </string>
    <string name="distributed_id">Distributed Code</string>
    <string name="permission">PERMISSION</string>
    <string name="sim_permission">SIM PERMISSION</string>
    <string name="sim_read">SIM READ</string>
    <string name="enter_dis">ENTER DISTRIBUTOR</string>
    <string name="done">Done</string>
    <string name="verify_mobile_number">Verify mobile number</string>
    <string name="verify_mobile_desc">We need to verify from your phone to verify and register your mobile on <b>Rapidx</b></string>
    <string name="select_sim">Please select SIM registered with your bank.</string>
    <string name="Auth">Authentication</string>
    <string name="cancel">Cancel</string>
    <string name="read">Read</string>
    <string name="confirmed">Confirmed</string>
    <string name="init">Verification Initiated</string>
    <string name="completed">Verification Completed</string>
    <string name="enter_pin">PinCode</string>
    <string name="confirm_sim">Confirm SIM</string>
    <string name="you_have_selected_sim_operator_do_you_want_to_process">You have selected %1$s. Do you want to proceed?</string>
    <string name="error_messages_verfication_fail">Enter correct 6 digit PinCode.</string>
    <string name="NO_INTERNET_CONNECTION">Please check your internet connection</string>
    <string name="PLEASE_ENTER_NAME">Please enter your name</string>
    <string name="PLEASE_ENTER_BALANCE">Please enter your balance</string>
    <string name="login_text">Login to your account</string>
    <string name="login_sub_heading">Enter your username &#38; password to login</string>
    <string name="PLEASE_ENTER_PASSWORD">Please enter password</string>
    <string name="PLEASE_ENTER_NUMBER">Please enter phone number</string>
    <string name="verify_sub_heading">Please enter your Pin Code</string>
    <string name="pinCode">Pin Code</string>
    <string name="PLEASE_ENTER_PIN">Please enter PinCode</string>
    <string name="PLEASE_ENTER_VALID">Please enter valid</string>
    <string name="dashboard">DashBoard</string>
    <string name="balance_manager">Bl Manager</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="sms_inbox">SMS Inbox</string>
    <string name="modems">Modems</string>
    <string name="sender">Sender</string>
    <string name="a_account">A Account</string>
    <string name="c_account">C Account</string>
    <string name="old_balance">Old Balance</string>
    <string name="amount">Amount</string>
    <string name="commission">Commission</string>
    <string name="last_balance">Last Balance</string>
    <string name="transaction_id">Txn Id</string>
    <string name="type">Type</string>
    <string name="status">Status</string>
    <string name="date">Date</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="sms_detail">SMS DETAIL</string>
    <string name="waiting_danger_pending">▲Waiting + Danger + Pending</string>
    <string name="only_success_approved">▲Only Success + Approved</string>
    <string name="total_trx_amount">TOTAL TRX AMOUNT</string>
    <string name="today_transactions">Today Transactions</string>
    <string name="today_sms">Today SMS</string>
    <string name="today_trx_amount">TODAY TRX AMOUNT</string>
    <string name="only_active_modem">▲Only Active Modem</string>
    <string name="total_modem">TOTAL MODEM</string>
    <string name="_0">0</string>
    <string name="total_transactions">TOTAL TRANSACTIONS</string>
    <string name="total_pending">TOTAL PENDING</string>
    <string name="customer_no">Customer No.</string>
    <string name="sr_no">Sr.</string>
    <string name="bl_all_transactions">All Txn</string>
    <string name="bl_success">Success</string>
    <string name="bl_pending">Pending</string>
    <string name="bl_rejected">Rejected</string>
    <string name="bl_approved">Approved</string>
    <string name="menu_approved">Approved</string>
    <string name="text_copied">Text Copied Successfully</string>
    <string name="reject_note">Reject Note</string>
    <string name="bl_danger">Danger</string>
    <string name="sms_all_sms">All sms</string>
    <string name="sms_cash_out">Cash Out</string>
    <string name="sms_cash_in">Cash In</string>
    <string name="sms_b2b">B2B</string>
    <string name="refresh_txn">Refresh Txn</string>
    <string name="refresh_sms">Refresh SMS</string>
    <string name="message">Message</string>
    <string name="msgType">Msg Type</string>
    <string name="receiver">Receiver</string>
    <string name="sms_unknown">Unknown</string>
    <string name="sms_type">Sms Type</string>
    <string name="sim_slot">Sim Slot</string>
    <string name="operator">Operator</string>
    <string name="device_id">Device Id</string>
    <string name="sim_id">Sim Id</string>
    <string name="device_info">Device Info</string>
    <string name="phone">Phone</string>
    <string name="agent">Agent</string>
    <string name="modem_detail">Model Detail</string>
    <string name="you_want_to_approved">You want to approved</string>
    <string name="you_want_to_rejected">You want to rejected</string>
    <string name="used_balance">Used Balance</string>
    <string name="support">Support</string>
    <string name="transaction">Transaction</string>
    <string name="modem">Modem</string>
    <string name="pending">Pending</string>
    <string name="manage_modems">Manage Modems</string>
    <string name="current_balance">Current Balance</string>
    <string name="search">Search</string>
    <string name="first_name">First Name</string>
    <string name="next">Next</string>
    <string name="pin_code">Pin Code</string>
    <string name="last_name">Last Name</string>
    <string name="refresh">refresh</string>
    <string name="existing_balance">Existing BALANCE</string>
    <string name="add_balance">Add Balance</string>
    <string name="zero">0.0</string>
    <string name="confirm_create">Confirm &#38; Create</string>
    <string name="notifications">Notifications</string>
    <string name="log_out">Log Out</string>
    <string name="transactions">Transactions</string>
    <string name="userName">Hello, <b>%1$s</b></string>
    <string name="welcome_text">Welcome to Utell Restaurant</string>
    <string name="continues">Continue</string>
    <string name="account_verified">Your Account \nis now Verified!</string>
    <string name="account_verified_sub">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="pendings">Pendings</string>
    <string name="no_data_found">No Data Found</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="add_modems">Add Modems</string>
    <string name="confirm_modems">Confirm Modem Info</string>
    <string name="PLEASE_ENTER_LAST_NAME">Please enter your last name</string>
    <string name="active_modems">Active Modems</string>
    <string name="inactive_modems">Inactive Modems</string>
    <string name="unblocked_modems">Unblocked Modems</string>
    <string name="blocked_modems">Blocked Modems</string>
    <string name="pending_modems">Pending Modems</string>
    <string name="all">All</string>
    <string name="utell">Utell</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="take_photo">Camera</string>
    <string name="choose_existing_photo">Gallery</string>
    <string name="name">Name</string>
    <string name="mobile_number">Phone Number</string>
    <string name="select_bank">Select Bank</string>
    <string-array name="bankList">
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
    </string-array>
    <string name="modem_status_change">Agent Status Change</string>
    <string name="balance_change">Balance Change</string>
    <string name="deposit_request">Deposit Request</string>
    <string name="withdrawal_request">Withdrawal Request</string>
    <string name="refund_request">Refund Request</string>
    <string name="add_amount">Add Amount</string>
    <string name="invalid_access_token">Invalid access token</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="active">Active</string>
    <string name="in_active">Inactive</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="b2b">B2B</string>
    <string name="new_balance_will">Available balance will be: %1$s</string>
    <string name="refund_amount">Refund Amount</string>
    <string name="amount_error">Please enter valid amount</string>
    <string name="note">Note</string>
    <string name="enter_note">Enter Note</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="no_transaction">No Transaction</string>
    <string name="prev">Prev</string>
    <string name="add_number">Add Number</string>
    <string name="notification_message">Notification Message</string>
    <string name="txn_id">TrxID</string>
    <string name="banktype">BankType</string>
    <string name="payee_number">Payee Number</string>
    <string name="success">Success</string>
    <string name="balance_manager_label">Balance Manager</string>
    <string name="demo">Demo</string>
    <string name="apply">Apply</string>
    <string name="used">Used</string>
    <string name="hold_balance">Hold Balance</string>
    <string name="add_hold_amount">Add hold amount</string>
    <string name="hold_amount">Hold Amount</string>
</resources>