<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/navigation_dashboard"
        android:icon="@drawable/dashboard_logo"
        android:title="@string/dashboard" />
    <item
        android:id="@id/navigation_pendingFragment"
        android:icon="@drawable/pending_logo"
        android:title="@string/pending" />
    <item
        android:id="@id/navigation_modemFragment"
        android:icon="@drawable/modem_logo"
        android:title="@string/modem" />

    <item
        android:id="@id/navigation_transactionFragment"
        android:icon="@drawable/transaction_logo"
        android:title="@string/transaction" />

    <item
        android:id="@id/navigation_b2bFragment"
        android:icon="@drawable/connection"
        android:title="@string/b2b" />

</menu>