<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimaryColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgPrimaryColor"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageClose"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/_4sdp"
            android:src="@drawable/ic_left_arrow"
            android:tint="@color/homeTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/labelTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:padding="@dimen/_5sdp"
            android:text="@string/hold_balance"
            android:textAlignment="center"
            android:textColor="@color/homeTextColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/labelNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppins"
        android:text="@string/note"
        android:textColor="@color/homeTextColor"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_card" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etNotes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/round_corners"
        android:backgroundTint="@color/sigInEditTextBackColor"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/enter_note"
        android:inputType="text"
        android:maxLines="1"
        android:padding="15dp"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelNotes"
        app:layout_constraintWidth_percent="0.85" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/labelAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppins"
        android:text="@string/hold_amount"
        android:textColor="@color/homeTextColor"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNotes" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etUpdateBalance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/round_corners"
        android:backgroundTint="@color/sigInEditTextBackColor"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/add_hold_amount"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:padding="15dp"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelAmount"
        app:layout_constraintWidth_percent="0.85" />

    <androidx.appcompat.widget.AppCompatCheckedTextView
        android:id="@+id/labelTotalBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppins"
        android:text="@string/new_balance_will"
        android:textColor="@color/homeTextColor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/etUpdateBalance"
        app:layout_constraintTop_toBottomOf="@id/etUpdateBalance" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUpdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_gradient"
        android:text="@string/update"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelTotalBalance"
        app:layout_constraintWidth_percent="0.85" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/btnUpdate" />

</androidx.constraintlayout.widget.ConstraintLayout>