<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_gray"
    android:paddingBottom="10dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageClose"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:padding="5dp"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:tint="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/sms_detail"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_sender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:padding="10dp"
        android:text="@string/sender"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageClose"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_sender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="12sp"

        app:layout_constraintBottom_toBottomOf="@id/label_sender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_sender"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_a_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:padding="10dp"
        android:text="@string/a_account"
        android:textAlignment="center"
        android:textSize="12sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_sender"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_a_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="12sp"

        app:layout_constraintBottom_toBottomOf="@id/label_a_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_a_account"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_c_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:padding="10dp"
        android:text="@string/c_account"
        android:textAlignment="center"
        android:textSize="12sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_a_account"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_c_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="12sp"

        app:layout_constraintBottom_toBottomOf="@id/label_c_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_c_account"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_old_balance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:padding="10dp"
        android:text="@string/old_balance"
        android:textAlignment="center"
        android:textSize="12sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_c_account"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_old_balance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:padding="10dp"
        android:textAlignment="center"

        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/label_old_balance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_old_balance"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:padding="10dp"
        android:text="@string/amount"
        android:textAlignment="center"
        android:textSize="12sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_old_balance"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="12sp"

        app:layout_constraintBottom_toBottomOf="@id/label_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_amount"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_commission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:padding="10dp"
        android:text="@string/commission"
        android:textAlignment="center"
        android:textSize="12sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_amount"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_commission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="12sp"

        app:layout_constraintBottom_toBottomOf="@id/label_commission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_commission"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_last_balance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:padding="10dp"
        android:text="@string/last_balance"
        android:textAlignment="center"
        android:textSize="12sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_commission"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_last_balance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="12sp"

        app:layout_constraintBottom_toBottomOf="@id/label_last_balance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_last_balance"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_transaction_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:padding="10dp"
        android:text="@string/transaction_id"
        android:textAlignment="center"
        android:textSize="12sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_last_balance"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_last_transaction_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="12sp"

        app:layout_constraintBottom_toBottomOf="@id/label_transaction_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_transaction_id"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:padding="10dp"
        android:text="@string/type"
        android:textAlignment="center"
        android:textSize="12sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_last_transaction_id"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="12sp"

        app:layout_constraintBottom_toBottomOf="@id/label_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_type"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:padding="10dp"
        android:text="@string/status"
        android:textAlignment="center"
        android:textSize="12sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_type"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textColor="@color/primaryColor"

        app:layout_constraintBottom_toBottomOf="@id/label_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_status"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:padding="10dp"
        android:text="@string/date"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_status"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="12sp"

        app:layout_constraintBottom_toBottomOf="@id/label_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_date"
        app:layout_constraintWidth_percent="0.5" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_accept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/greenColor"
        android:padding="10dp"
        android:text="@string/accept"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toStartOf="@id/btn_reject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_date"
        app:layout_constraintWidth_percent="0.45" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primaryColor"
        android:padding="10dp"
        android:text="@string/reject"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_accept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_accept"
        app:layout_constraintTop_toTopOf="@id/btn_accept"
        app:layout_constraintWidth_percent="0.45" />

</androidx.constraintlayout.widget.ConstraintLayout>